--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en" id="html">
+<head>
+    <title>THE 273 FUND</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div class="header"><h1>THE 273 FUND</h1></div>
+    <div class="content">
+        <div class="headings">
+            <h2>ABOUT US</h2>
+            <p>
+                4 trons 1 ece
+            </p>
+            <h2>OUR MISSION</h2>
+			<p>
+                have fun
+            </p>
+            <h2>THE PROBLEM</h2>
+			<p>
+                bylaws
+            </p>
+            <h2>THE SOLUTION</h2>
+			<p>
+                money
+            </p>
+            <h2>HOW YOU CAN HELP</h2>
+			<p>
+                give us money
+            </p>
+            <h2>WHERE YOUR MONEY WILL GO</h2>
+			<p>
+                to pay for the bylaw ticket
+            </p>
+            <h2>DONORS</h2>
+			<p>
+                your name here
+            </p>
+		</div>
+    </div>
+</body>
+</html>
 
