--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" id="html">
 <head>
-    <title>THE 273 FUND</title>
+    <title>THE 273 ALBERT FUND</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="header"><h1>THE 273 FUND</h1></div>
+    <div class="header"><h1>THE 273 ALBERT FUND</h1></div>
     <div class="content">
         <div class="headings">
             <h2>ABOUT US</h2>
-            <p>
-                4 trons 1 ece
-            </p>
+            <p>5 university engineering students - Sam, Phill, Cooper, Jerry, Kayra</p>
             <h2>OUR MISSION</h2>
-			<p>
-                have fun
-            </p>
+			<p>to have fun with friends</p>
             <h2>THE PROBLEM</h2>
-			<p>
-                bylaws
-            </p>
-            <h2>THE SOLUTION</h2>
-			<p>
-                money
-            </p>
+			<p>we accidently partied too hard and got a $980 noise related fine</p>
             <h2>HOW YOU CAN HELP</h2>
-			<p>
-                give us money
-            </p>
+			<p>we would much appreciate any donations to help pay the fine</p>
             <h2>WHERE YOUR MONEY WILL GO</h2>
-			<p>
-                to pay for the bylaw ticket
-            </p>
+			<p>to help us pay for the noise bylaw violation ticket</p>
+			<h2>HOW TO DONATE</h2>
+			<p>send an e-transfer to @the273 albert fund, leave your name or a nickname as the message to be featured in the donor section. Donations with no names will be anonymous by default.</p>
+			<p>any amount would be immensely appreciated by all of us </p>
             <h2>DONORS</h2>
-			<p>
-                your name here
-            </p>
+			<img id="platinum" src="assets/platinum.png" alt="platinum">
+			<p><b>$15+</b></p>
+			<p>your name here</p>
+			<img src="assets/gold.png" alt="gold">
+			<p><b>$10+</b></p>
+			<p>your name here</p>
+			<img src="assets/silver.png" alt="silver">
+			<p><b>$5+</b></p>
+			<p>your name here</p>
+			<img src="assets/bronze.png" alt="bronze">
+			<p>your name here</p>
+			<h2>DISCLAIMER</h2>
+			<p>all donations will go exclusively towards paying the fine</p>
 		</div>
     </div>
 </body>
