--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" id="html">
 <head>
-    <title>THE 273 ALBERT FUND</title>
+    <title>273 ALBERT</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,13 +15,13 @@
             <h2>OUR MISSION</h2>
 			<p>to have fun with friends</p>
             <h2>THE PROBLEM</h2>
-			<p>we accidently partied too hard and got a $980 noise related fine</p>
+			<p>we accidently partied too hard and got a $980 noise related fine of which we accept full responsibility</p>
             <h2>HOW YOU CAN HELP</h2>
+			<p>many of our friends offered to help pay the fine, so we decided this would be a fun way to take donations.</p>
 			<p>we would much appreciate any donations to help pay the fine</p>
-            <h2>WHERE YOUR MONEY WILL GO</h2>
-			<p>to help us pay for the noise bylaw violation ticket</p>
 			<h2>HOW TO DONATE</h2>
-			<p>send an e-transfer to @the273 albert fund, leave your name or a nickname as the message to be featured in the donor section. Donations with no names will be anonymous by default.</p>
+			<p>send an e-transfer to 273.albert.st@gmail.com</p>
+			<p>leave your name or a nickname as the message to be featured in the donor section. donations with no names will be anonymous by default.</p>
 			<p>any amount would be immensely appreciated by all of us </p>
             <h2>DONORS</h2>
 			<img id="platinum" src="assets/platinum.png" alt="platinum">
@@ -37,6 +37,7 @@
 			<p>your name here</p>
 			<h2>DISCLAIMER</h2>
 			<p>all donations will go exclusively towards paying the fine</p>
+			<p>if total donations exceed the fine amount, the surplus will be donated to the Waterloo Food Bank</p>
 		</div>
     </div>
 </body>
