--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" id="html">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-228187201-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-228187201-1');
+	</script>
     <title>273 ALBERT</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
@@ -11,18 +20,19 @@
     <div class="content">
         <div class="headings">
             <h2>ABOUT US</h2>
-            <p>5 university engineering students - Sam, Phill, Cooper, Jerry, Kayra</p>
+            <p>5 University engineering students - Sam, Phill, Cooper, Jerry, Kayra</p>
             <h2>OUR MISSION</h2>
-			<p>to have fun with friends</p>
+			<p>To have fun with friends.</p>
             <h2>THE PROBLEM</h2>
-			<p>we accidently partied too hard and got a $980 noise related fine of which we accept full responsibility</p>
+			<p>We accidently partied too hard and got a $980 noise related fine of which we accept full responsibility.</p>
             <h2>HOW YOU CAN HELP</h2>
-			<p>many of our friends offered to help pay the fine, so we decided this would be a fun way to take donations.</p>
-			<p>we would much appreciate any donations to help pay the fine</p>
+			<p>Many of our friends offered to help pay the fine, so we decided this would be a fun way to take donations.</p>
+			<p>We would much appreciate any donations to help pay the fine.</p>
 			<h2>HOW TO DONATE</h2>
-			<p>send an e-transfer to 273.albert.st@gmail.com</p>
-			<p>leave your name or a nickname as the message to be featured in the donor section. donations with no names will be anonymous by default.</p>
-			<p>any amount would be immensely appreciated by all of us </p>
+			<p>Send an e-transfer to 273.albert.st@gmail.com</p>
+			<p>Leave your name or a nickname as the message to be featured in the donor section, 
+				donations with no names will be anonymous by default.</p>
+			<p>Any amount is sincerely appreciated.</p>
             <h2>DONORS</h2>
 			<img id="platinum" src="assets/platinum.png" alt="platinum">
 			<p><b>$15+</b></p>
@@ -36,8 +46,8 @@
 			<img src="assets/bronze.png" alt="bronze">
 			<p>your name here</p>
 			<h2>DISCLAIMER</h2>
-			<p>all donations will go exclusively towards paying the fine</p>
-			<p>if total donations exceed the fine amount, the surplus will be donated to the Waterloo Food Bank</p>
+			<p>All donations will go exclusively towards paying the fine.</p>
+			<p>If total donations exceed the fine amount, the surplus will be donated to the Food Bank.</p>
 		</div>
     </div>
 </body>
