--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
             <h2>DONORS</h2>
 			<img id="platinum" src="assets/platinum.png" alt="platinum">
 			<p><b>$15+</b></p>
-			<p>your name here</p>
+			<p>Ryan</p>
+			<p>Maximo</p>
+			<p>Eana+Denoose</p>
+			<p>Clayton</p>
+			<p>"Sending good thoughts"</p>
+			<p>"Roof4Rep"</p>
+			<p>Anon</p>
+			<p>Mimo (w/ love)</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
 			<p>your name here</p>
