more donors + messages

--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
             <h2>DONORS</h2>
 			<img id="platinum" src="assets/platinum.png" alt="platinum">
 			<p><b>$15+</b></p>
-			<p>Ryan</p>
-			<p>Maximo</p>
+			<p>Ryan - good luck lads</p>
+			<p>Maximo - xoxo</p>
 			<p>Eana+Denoose</p>
 			<p>Clayton</p>
-			<p>"Sending good thoughts"</p>
+			<p>Anonymous - "Sending good thoughts"</p>
 			<p>"Roof4Rep"</p>
-			<p>Anon</p>
+			<p>Anonymous</p>
 			<p>Mimo (w/ love)</p>
+			<p>Sammy 2 Chains - keep your heads up boys</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
 			<p>your name here</p>
