--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 			<p>Anonymous</p>
 			<p>Mimo (w/ love)</p>
 			<p>Sammy 2 Chains - keep your heads up boys</p>
+			<p>Cug</p>
+			<p>Ansh+Anmol</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
 			<p>your name here</p>
