lots of generous donors added

--- a/index.html
+++ b/index.html
@@ -36,17 +36,27 @@
             <h2>DONORS</h2>
 			<img id="platinum" src="assets/platinum.png" alt="platinum">
 			<p><b>$15+</b></p>
-			<p>Ryan - good luck lads</p>
-			<p>Maximo - xoxo</p>
+			<p>Ryan - "good luck lads"</p>
+			<p>Maximo - "xoxo"</p>
 			<p>Eana+Denoose</p>
 			<p>Clayton</p>
 			<p>Anonymous - "Sending good thoughts"</p>
 			<p>"Roof4Rep"</p>
 			<p>Anonymous</p>
 			<p>Mimo (w/ love)</p>
-			<p>Sammy 2 Chains - keep your heads up boys</p>
+			<p>Sammy 2 Chains - "keep your heads up boys"</p>
 			<p>Cug</p>
 			<p>Ansh+Anmol</p>
+			<p>Andrew</p>
+			<p>"Shhhh"</p>
+			<p>Heat</p>
+			<p>Ethan - "Maximo needs roof access"</p>
+			<p>Anonymous</p>
+			<p>Anonymous - "That which does not kill us, makes us stronger"</p>
+			<p>Aidan - "Thanks for taking one for the team boys"</p>
+			<p>Anonymous</p>
+			<p>Anonymous</p>
+			<p>Cole Gravelle</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
 			<p>your name here</p>
@@ -54,9 +64,10 @@
 			<p><b>$5+</b></p>
 			<p>your name here</p>
 			<img src="assets/bronze.png" alt="bronze">
-			<p>your name here</p>
+			<p>Jerry</p>
 			<h2>DISCLAIMER</h2>
 			<p>All donations will go exclusively towards paying the fine.</p>
+			<p>If total donations exceed the price of the fine, we will donate the surplus to the Food Bank</p>
 		</div>
     </div>
 </body>
