--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 			<p>Anonymous</p>
 			<p>Anonymous</p>
 			<p>Cole Gravelle</p>
+			<p>Anonymous</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
 			<p>your name here</p>
