updated donners list, from jerry

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 			<p>Anonymous</p>
 			<p>Cole Gravelle</p>
 			<p>Anonymous</p>
+			<p>Manny - "Good luck guys!"</p>
+			<p>8======D (rap music)</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
 			<p>your name here</p>
