new donors from jerry again

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
 			<p>Anonymous</p>
 			<p>Manny - "Good luck guys!"</p>
 			<p>8======D (rap music)</p>
+			<p>Anonymous</p>
+			<p>Anonymous - "love it"</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
-			<p>your name here</p>
+			<p>o7 -Christian</p>
 			<img src="assets/silver.png" alt="silver">
 			<p><b>$5+</b></p>
 			<p>your name here</p>
