new donnors yesyes

--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
 			<p>8======D (rap music)</p>
 			<p>Anonymous</p>
 			<p>Anonymous - "love it"</p>
+			<p>Anonymous - "gl guys!"</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
 			<p>o7 -Christian</p>
+			<p>Anonymous</p>
 			<img src="assets/silver.png" alt="silver">
 			<p><b>$5+</b></p>
 			<p>your name here</p>
