--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 			<p>Anonymous</p>
 			<p>Anonymous - "love it"</p>
 			<p>Anonymous - "gl guys!"</p>
+			<p>Anonymous - "Goodluck"</p>
+			<p>The Most Bout It</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
 			<p>o7 -Christian</p>
