--- a/index.html
+++ b/index.html
@@ -16,69 +16,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="header"><h1>THE 273 ALBERT FUND</h1></div>
+    <div class="header"><h1>GIN AND TRONIC S22</h1></div>
     <div class="content">
         <div class="headings">
-            <h2>ABOUT US</h2>
-            <p>5 University engineering students - Sam, Phill, Cooper, Jerry, Kayra</p>
-            <h2>OUR MISSION</h2>
-			<p>To have fun with friends.</p>
-            <h2>THE PROBLEM</h2>
-			<p>We accidently partied too hard and got a $980 noise related fine of which we accept full responsibility.</p>
-            <h2>HOW YOU CAN HELP</h2>
-			<p>Many of our friends offered to help pay the fine, so we decided this would be a fun way to take donations.</p>
-			<p>We would much appreciate any donations to help pay the fine.</p>
-			<h2>HOW TO DONATE</h2>
-			<p>Send an e-transfer to 273.albert.st@gmail.com</p>
-			<p>Leave your name or a nickname as the message to be featured in the donor section, 
-				donations with no names will be anonymous by default.</p>
-			<p>Any amount is sincerely appreciated.</p>
-            <h2>DONORS</h2>
-			<img id="platinum" src="assets/platinum.png" alt="platinum">
-			<p><b>$15+</b></p>
-			<p>Ryan - "good luck lads"</p>
-			<p>Maximo - "xoxo"</p>
-			<p>Eana+Denoose</p>
-			<p>Clayton</p>
-			<p>Anonymous - "Sending good thoughts"</p>
-			<p>"Roof4Rep"</p>
-			<p>Anonymous</p>
-			<p>Mimo (w/ love)</p>
-			<p>Sammy 2 Chains - "keep your heads up boys"</p>
-			<p>Cug</p>
-			<p>Ansh+Anmol</p>
-			<p>Andrew</p>
-			<p>"Shhhh"</p>
-			<p>Heat</p>
-			<p>Ethan - "Maximo needs roof access"</p>
-			<p>Anonymous</p>
-			<p>Anonymous - "That which does not kill us, makes us stronger"</p>
-			<p>Aidan - "Thanks for taking one for the team boys"</p>
-			<p>Anonymous</p>
-			<p>Anonymous</p>
-			<p>Cole Gravelle</p>
-			<p>Anonymous</p>
-			<p>Manny - "Good luck guys!"</p>
-			<p>8======D (rap music)</p>
-			<p>Anonymous</p>
-			<p>Anonymous - "love it"</p>
-			<p>Anonymous - "gl guys!"</p>
-			<p>Anonymous - "Goodluck"</p>
-			<p>The Most Bout It</p>
-			<img src="assets/gold.png" alt="gold">
-			<p><b>$10+</b></p>
-			<p>o7 -Christian</p>
-			<p>Anonymous</p>
-			<img src="assets/silver.png" alt="silver">
-			<p><b>$5+</b></p>
-			<p>your name here</p>
-			<img src="assets/bronze.png" alt="bronze">
-			<p>Jerry</p>
-			<h2>DISCLAIMER</h2>
-			<p>All donations will go exclusively towards paying the fine.</p>
-			<p>If total donations exceed the price of the fine, we will donate the surplus to the Food Bank</p>
+            <h2>WHAT</h2>
+			<p>Gin and Tronic is the traditional tron party hosted by trons, for trons</p>	
+            <h2>WHEN</h2>
+			<p>June 3rd, 9pm</p>
+            <h2>WHERE</h2>
+			<p>273 Albert</p>			
+            <h2>WHO</h2>
+			<p>1B, 2B, 3A trons only</p>
+			<h2>DETAILS</h2>
+			<p>byob, be respectful</p>
 		</div>
     </div>
 </body>
+<footer>
+	<p><a href=fund.html>273 Albert Fund</a></p>
+</footer>
 </html>
 
+ 
