gin and tronic small changes

--- a/fund.html
+++ b/fund.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" id="html">
 <head>
-	<!--
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-228187201-1"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
@@ -9,7 +9,7 @@
 	  gtag('js', new Date());
 
 	  gtag('config', 'UA-228187201-1');
-	</script> -->
+	</script>
     <title>273 ALBERT</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
