--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>WHERE</h2>
 			<p>273 Albert</p>			
             <h2>WHO</h2>
-			<p>1B, 2B, 3A trons only</p>
+			<p>trons</p>
 			<h2>DETAILS</h2>
 			<p>byob, be respectful</p>
 		</div>
