--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>WHEN</h2>
 			<p>June 3rd, 9pm</p>
             <h2>WHERE</h2>
-			<p>273 Albert</p>			
+			<p>273 Albert, indoors</p>			
             <h2>WHO</h2>
 			<p>trons</p>
 			<h2>DETAILS</h2>
