--- a/fund.html
+++ b/fund.html
@@ -10,13 +10,13 @@
 
 	  gtag('config', 'UA-228187201-1');
 	</script>
-    <title>273 ALBERT</title>
+    <title>WRENCHHOUSE</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="header"><h1>THE 273 ALBERT FUND</h1></div>
+    <div class="header"><h1>THE WRENCHHOUSE FUND</h1></div>
     <div class="content">
         <div class="headings">
             <h2>ABOUT US</h2>
@@ -29,7 +29,7 @@
 			<p>Many of our friends offered to help pay the fine, so we decided this would be a fun way to take donations.</p>
 			<p>We would much appreciate any donations to help pay the fine.</p>
 			<h2>HOW TO DONATE</h2>
-			<p>Send an e-transfer to 273.albert.st@gmail.com</p>
+			<p>Send an e-transfer to wrenchhouse5@gmail.com</p>
 			<p>Leave your name or a nickname as the message to be featured in the donor section, 
 				donations with no names will be anonymous by default.</p>
 			<p>Any amount is sincerely appreciated.</p>
@@ -39,7 +39,7 @@
 			<p>Ryan - "good luck lads"</p>
 			<p>Maximo - "xoxo"</p>
 			<p>Eana+Denoose</p>
-			<p>Clayton</p>
+			<p>Clayton - "f12"</p>
 			<p>Anonymous - "Sending good thoughts"</p>
 			<p>"Roof4Rep"</p>
 			<p>Anonymous</p>
@@ -66,6 +66,9 @@
 			<p>Anonymous - "Goodluck"</p>
 			<p>The Most Bout It</p>
 			<p>Anonymous</p>
+			<p>Anonymous - "Fund!"</p>
+			<p>Hum - "for the uw community center"
+			<p>Old Tron - "Love, Tron 23"</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
 			<p>o7 -Christian</p>
