--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	  gtag('config', 'UA-228187201-1');
 	</script>
-    <title>273 ALBERT</title>
+    <title>WRENCHHOUSE</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,21 +19,15 @@
     <div class="header"><h1>GIN AND TRONIC S22</h1></div>
     <div class="content">
         <div class="headings">
-            <h2>WHAT</h2>
-			<p>Gin and Tronic is the traditional tron party hosted by trons, for trons</p>	
-            <h2>WHEN</h2>
-			<p>June 3rd, 9pm</p>
-            <h2>WHERE</h2>
-			<p>273 Albert, indoors</p>			
-            <h2>WHO</h2>
-			<p>trons</p>
-			<h2>DETAILS</h2>
-			<p>byob, be respectful</p>
+			<h2>THANK YOU</h2>
+			<p>Gin and Tronic S22 was a success, we hope you had as much fun as we did. Thank you for attending and go team.</p>
+            <h3>WHAT IS GIN AND TRONIC?</h3>
+			<p>Gin and Tronic is the traditional tron party hosted by trons, for trons.</p>
 		</div>
     </div>
 </body>
 <footer>
-	<p><a href=fund.html>273 Albert Fund</a></p>
+	<p><a href=fund.html>wrenchhouse fund</a></p>
 </footer>
 </html>
 
