small text changes

--- a/fund.html
+++ b/fund.html
@@ -10,13 +10,13 @@
 
 	  gtag('config', 'UA-228187201-1');
 	</script>
-    <title>WRENCHHOUSE</title>
+    <title>Wrench House</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="header"><h1>THE WRENCHHOUSE FUND</h1></div>
+    <div class="header"><h1>THE WRENCH HOUSE FUND</h1></div>
     <div class="content">
         <div class="headings">
             <h2>ABOUT US</h2>
@@ -24,7 +24,7 @@
             <h2>OUR MISSION</h2>
 			<p>To have fun with friends.</p>
             <h2>THE PROBLEM</h2>
-			<p>We accidently partied too hard and got a $980 noise related fine of which we accept full responsibility.</p>
+			<p>We accidently partied too hard the first weekend of the S22 term and got a $980 noise related fine of which we accept full responsibility.</p>
             <h2>HOW YOU CAN HELP</h2>
 			<p>Many of our friends offered to help pay the fine, so we decided this would be a fun way to take donations.</p>
 			<p>We would much appreciate any donations to help pay the fine.</p>
