--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	  gtag('config', 'UA-228187201-1');
 	</script>
-    <title>WRENCHHOUSE</title>
+    <title>Wrench House</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +27,7 @@
     </div>
 </body>
 <footer>
-	<p><a href=fund.html>wrenchhouse fund</a></p>
+	<p><a href=fund.html>the wrench house fund</a></p>
 </footer>
 </html>
 
