--- a/fund.html
+++ b/fund.html
@@ -19,6 +19,9 @@
     <div class="header"><h1>THE WRENCH HOUSE FUND</h1></div>
     <div class="content">
         <div class="headings">
+			<h2>UPDATE</h2>
+			<p>We have exercised the option to meet with the prosecutor and fight the ticket, meeting is set for september.</p>
+			<p>If the meeting with the prosecutor is unsuccessful, we will go to court, they better lawyer up.</p>
             <h2>ABOUT US</h2>
             <p>5 University engineering students - Sam, Phill, Cooper, Jerry, Kayra</p>
             <h2>OUR MISSION</h2>
@@ -41,14 +44,14 @@
 			<p>Eana+Denoose</p>
 			<p>Clayton - "f12"</p>
 			<p>Anonymous - "Sending good thoughts"</p>
-			<p>"Roof4Rep"</p>
+			<p>Anonymous - "Roof4Rep"</p>
 			<p>Anonymous</p>
 			<p>Mimo (w/ love)</p>
 			<p>Sammy 2 Chains - "keep your heads up boys"</p>
 			<p>Cug</p>
 			<p>Ansh+Anmol</p>
 			<p>Andrew</p>
-			<p>"Shhhh"</p>
+			<p>Anonymous - "Shhhh"</p>
 			<p>Heat</p>
 			<p>Ethan - "Maximo needs roof access"</p>
 			<p>Anonymous</p>
