--- a/ginandtronic.html
+++ b/ginandtronic.html
@@ -16,25 +16,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="header"><h1>SUMMERLOO SPLASH</h1></div>
+    <div class="header"><h1>GIN AND TRONIC S22</h1></div>
     <div class="content">
+		<img id="maxiroof" src="assets/maxiroof.jpg" alt="maxiroof">
         <div class="headings">
-			<h2>WHAT</h2>
-			<p>darty | /dɑ:(r)ti/ | day + party = darty</p>
-			<p>co-hosted with neighbours, beach day theme</p>
-			<p>it may get wet...</p>
-            <h2>WHEN</h2>
-			<p>july 16th, noon</p>
-			<h2>WHERE</h2>
-			<p>you probably know by now</p>
+			<h2>THANK YOU</h2>
+			<p>Gin and Tronic S22 was a success, we hope you had as much fun as we did.</p>
+			<p>Thank you for attending and go team.</p>
+            <h3>WHAT IS GIN AND TRONIC?</h3>
+			<p>Gin and Tronic is the traditional tron party hosted by trons, for trons.</p>
+			<h3>WHEN IS THE NEXT ONE?</h3>
+			<p>Stay tuned for future terms...</p>
 		</div>
     </div>
 </body>
-<footer>
-	<h3>other links</h3>
-	<p><a href=ginandtronic.html>gin and tronic</a><p>
-	<p><a href=fund.html>the wrench house fund</a></p>
-</footer>
-</html>
-
- 
