--- a/fund.html
+++ b/fund.html
@@ -21,7 +21,8 @@
         <div class="headings">
 			<h2>UPDATE</h2>
 			<p>We have exercised the option to meet with the prosecutor and fight the ticket, meeting is set for september.</p>
-			<p>If the meeting with the prosecutor is unsuccessful, we will go to court, they better lawyer up.</p>
+			<p>If the meeting with the prosecutor is unsuccessful, we will go to court; they better lawyer up.</p>
+			<img id="lawyerup" src="assets/lawyerup.jpg" alt="lawyerup">
             <h2>ABOUT US</h2>
             <p>5 University engineering students - Sam, Phill, Cooper, Jerry, Kayra</p>
             <h2>OUR MISSION</h2>
