--- a/ginandtronic.html
+++ b/ginandtronic.html
@@ -26,7 +26,7 @@
             <h3>WHAT IS GIN AND TRONIC?</h3>
 			<p>Gin and Tronic is the traditional tron party hosted by trons, for trons.</p>
 			<h3>WHEN IS THE NEXT ONE?</h3>
-			<p>Stay tuned for future terms...</p>
+			<p>Stay tuned in future terms...</p>
 		</div>
     </div>
 </body>
