--- a/asseating.html
+++ b/asseating.html
@@ -16,26 +16,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="header"><h1>SUMMERLOO SPLASH</h1></div>
+    <div class="header"><h1>A Heuristical Study on Aged vs. Non-Aged Ass Consumption Tradeoffs with Currency Exchange</h1></div>
     <div class="content">
         <div class="headings">
-			<h2>WHAT</h2>
-			<p>darty | /dɑ:(r)ti/ | day + party = darty</p>
-			<p>co-hosted with neighbours, beach day theme</p>
-			<p>it may get wet...</p>
-            <h2>WHEN</h2>
-			<p>july 16th, noon</p>
-			<h2>WHERE</h2>
-			<p>you probably know by now</p>
+			<p>Coming Soon</p>
 		</div>
     </div>
 </body>
-<footer>
-	<h3>other links</h3>
-	<p><a href=ginandtronic.html>gin and tronic</a><p>
-	<p><a href=fund.html>the wrench house fund</a></p>
-	<p><a href=wrenchblog.html>wrench blog</a></p>
-</footer>
 </html>
-
- 
