--- a/fund.html
+++ b/fund.html
@@ -10,7 +10,7 @@
 
 	  gtag('config', 'UA-228187201-1');
 	</script>
-    <title>Wrench House</title>
+    <title>WH | Fund</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
 			<p>If the meeting with the prosecutor is unsuccessful, we will go to court; they better lawyer up.</p>
 			<img id="lawyerup" src="assets/lawyerup.jpg" alt="lawyerup">
             <h2>ABOUT US</h2>
-            <p>5 University engineering students - Sam, Phill, Cooper, Jerry, Kayra</p>
+            <p>5 university engineering students.</p>
             <h2>OUR MISSION</h2>
 			<p>To have fun with friends.</p>
             <h2>THE PROBLEM</h2>
