--- a/ginandtronic.html
+++ b/ginandtronic.html
@@ -10,7 +10,7 @@
 
 	  gtag('config', 'UA-228187201-1');
 	</script>
-    <title>Wrench House</title>
+    <title>WH | Gin and Tronic</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
