--- a/summerloosplash.html
+++ b/summerloosplash.html
@@ -10,20 +10,22 @@
 
 	  gtag('config', 'UA-228187201-1');
 	</script>
-    <title>Wrench House</title>
+    <title>WH | Summerloo Splash</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="header"><h1>DIRECTORY</h1></div>
+    <div class="header"><h1>SUMMERLOO SPLASH</h1></div>
     <div class="content">
+		<img id="maxiroof" src="assets/jerry.jpeg" alt="maxiroof">
         <div class="headings">
-			<p><a href=casinonight.html>casino night</a><p>
-			<p><a href=summerloosplash.html>summerloo splash</a><p>
-			<p><a href=ginandtronic.html>gin and tronic</a><p>
-			<p><a href=fund.html>the wrench house fund</a></p>
-			<p><a href=wrenchblog.html>wrench blog</a></p>
+			<h2>THANK YOU</h2>
+			<p>it was a splashing success, summerloo is real</p>
+			<h3>WHAT WAS SUMMERLOO SPLASH?</h3>
+			<p>darty | /dɑ:(r)ti/ | day + party = darty</p>
+			<p>co-hosted with neighbours, beach day theme</p>
+			<p>may have got wet...</p>
 		</div>
     </div>
 </body>
