--- a/casinonight.html
+++ b/casinonight.html
@@ -10,7 +10,7 @@
 
 	  gtag('config', 'UA-228187201-1');
 	</script>
-    <title>Wrench House</title>
+    <title>WH | Casino Night</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,9 @@
     <div class="content">
 		<img id="casinoroyale" src="assets/casinoroyale.jpeg" alt="casinoroyale">
         <div class="headings">
-			<p>details coming soon...</p>
+			<h3>DETAILS</h3>
+			<p>poker and social night</p>
+			<p>$5 poker buy in, semi-formal dress code</p>
 		</div>
     </div>
 </body>
