--- a/about.html
+++ b/about.html
@@ -10,22 +10,16 @@
 
 	  gtag('config', 'UA-228187201-1');
 	</script>
-    <title>WH | Casino Night</title>
+    <title>WH | About</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="header"><h1>CASINO NIGHT</h1></div>
+    <div class="header"><h1>ABOUT</h1></div>
     <div class="content">
-		<img id="casinonight" src="assets/casinonight.jpeg" alt="casinonight">
         <div class="headings">
-			<h2>THANK YOU</h2>
-			<p>Casino night was a success, congrats to those who won money.</p>
-			<p>see you next time</p>	
-			<h3>DETAILS</h3>
-			<p>poker and social night</p>
-			<p>$5 poker buy in, semi-formal dress code</p>
+			<p>5 university engineering students who like to have fun with friends</p>	
 		</div>
     </div>
 </body>
