--- a/fund.html
+++ b/fund.html
@@ -19,7 +19,15 @@
     <div class="header"><h1>THE WRENCH HOUSE FUND</h1></div>
     <div class="content">
         <div class="headings">
-			<h2>UPDATE</h2>
+			<h2>UPDATES</h2>
+			<h3>SEPT</h3>
+			<p>The meeting with the prosecutor was a success, 
+				we came to a settlement, reducing the ticket to $480 and thanks to you, 
+				we can pay off the full balance. We are beyond grateful for the donations, 
+				which totalled $826.88. The surplus of $346.88 will be donated to the food bank. 
+				Thanks again for your generosity and support.
+			</p>
+			<h3>JUNE</h3>
 			<p>We have exercised the option to meet with the prosecutor and fight the ticket, meeting is set for september.</p>
 			<p>If the meeting with the prosecutor is unsuccessful, we will go to court; they better lawyer up.</p>
 			<img id="lawyerup" src="assets/lawyerup.jpg" alt="lawyerup">
@@ -64,7 +72,6 @@
 			<p>Anonymous</p>
 			<p>Manny - "Good luck guys!"</p>
 			<p>8======D (rap music)</p>
-			<p>Anonymous</p>
 			<p>Anonymous - "love it"</p>
 			<p>Anonymous - "gl guys!"</p>
 			<p>Anonymous - "Goodluck"</p>
@@ -75,6 +82,7 @@
 			<p>Old Tron - "Love, Tron 23"</p>
 			<img src="assets/gold.png" alt="gold">
 			<p><b>$10+</b></p>
+			<p>Anonymous</p>
 			<p>o7 -Christian</p>
 			<p>Anonymous</p>
 			<img src="assets/silver.png" alt="silver">
