--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="header"><h1>DIRECTORY</h1></div>
+    <div class="header">
+		<h1>WRENCH HOUSE</h1>
+		<p>welcome to the wrench house website, stay a while</p>
+	</div>
     <div class="content">
         <div class="headings">
+			<h2>DIRECTORY</h2>
 			<p><a href=casinonight.html>casino night</a><p>
 			<p><a href=summerloosplash.html>summerloo splash</a><p>
 			<p><a href=ginandtronic.html>gin and tronic</a><p>
 			<p><a href=fund.html>the wrench house fund</a></p>
 			<p><a href=wrenchblog.html>wrench blog</a></p>
+			<p><a href=about.html>about</a></p>
 		</div>
     </div>
 </body>
