--- a/fund.html
+++ b/fund.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" id="html">
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-228187201-1"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-WQXEV4JHSX"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
-	  gtag('config', 'UA-228187201-1');
+	gtag('config', 'G-WQXEV4JHSX');
 	</script>
     <title>WH | Fund</title>
     <link rel="stylesheet" href="index.css">
