--- a/index.html
+++ b/index.html
@@ -10,25 +10,64 @@
 
 	gtag('config', 'G-WQXEV4JHSX');
 	</script>
-    <title>Wrench House</title>
+    <title>Wrench Fund</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="header">
-		<h1>WRENCH HOUSE</h1>
-		<p>welcome to the wrench house website, stay a while</p>
+        <img id="wrenchfund_logo" src="assets/wrenchfund_logo.png" alt="Wrench Fund Logo" />
 	</div>
     <div class="content">
         <div class="headings">
-			<h2>DIRECTORY</h2>
-			<p><a href=casinonight.html>casino night</a><p>
-			<p><a href=summerloosplash.html>summerloo splash</a><p>
-			<p><a href=ginandtronic.html>gin and tronic</a><p>
-			<p><a href=fund.html>the wrench house fund</a></p>
-			<p><a href=wrenchblog.html>wrench blog</a></p>
-			<p><a href=about.html>about</a></p>
+			<h2>ABOUT</h2>
+            <p>wrench fund is run by 5 uwaterloo tron grads that aims to increase the agency of young engineers
+                with aspirations of increasing the amount of hardware built in canada
+            </p>
+            <h2>THE WRENCH GRANT</h2>
+            <p>wrench fund is offering a $300 grant to a uwaterloo capstone team
+                to overcome financial barriers and inspire them to pursue their project further
+            </p>
+            <h2>WHAT WE ARE LOOKING FOR</h2>
+            <p>we want to support teams that are:
+                <ul>
+                    <li>working on hardware</li>
+                    <li>passionate about solving problems</li>
+                    <li>curious about commercialization and taking their project to the next level</li>
+                </ul>
+            </p>
+            <h2>HOW TO APPLY</h2>
+            <p>apply <a href="https://forms.gle/Pd3mxbpGR3UyHjqM8" target="_blank">here</a>, 
+                with your information and a 1 min video that tells us:
+                <ul>
+                    <li>who you are</li>
+                    <li>what are you working on</li>
+                    <li>wow would the money help</li>
+                </ul>
+            </p>
+            <h2>DEADLINE</h2>
+            <p>applications are due by 11:59pm on December 24th</p>
+            <h2></h2>
+            <h2>FAQ</h2>
+            <div class="faq">
+                <h3>why only $300?</h3>
+                <p>we just graduated and only one of us has a cali job</p>
+                <h3>why even do it then?</h3>
+                <p>we care and want to help, even if it's just a little bit. 
+                </p>
+                <p>read our master plan <a href="wrenchfund_plan.html">here</a></p>
+                <h3>why only capstone groups?</h3>
+                <p>it's easier that way for now</p>
+                <h3>will you expand elligibility in the future?</h3>
+                <p>yes we hope to</p>
+                <h3>are there any strings attached?</h3>
+                <p>no</p>
+                <h3>how will I get the money?</h3>
+                <p>e-transfer or cash</p>
+                <h3>when will I get the money</h3>
+                <p>January 1st</p>
+            </div>
 		</div>
     </div>
 </body>
