--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <div class="content">
         <div class="headings">
 			<h2>ABOUT</h2>
-            <p>wrench fund is run by 5 uwaterloo tron grads that aims to increase the agency of young engineers
-                with aspirations of increasing the amount of hardware built in canada
+            <p>wrench fund is run by five uwaterloo engineering grads with the goal of 
+                increasing the agency of young engineers and the amount of hardware built in canada
             </p>
             <h2>THE WRENCH GRANT</h2>
             <p>wrench fund is offering a $300 grant to a uwaterloo capstone team
-                to overcome financial barriers and inspire them to pursue their project further
+                to help them overcome financial barriers and inspire them to pursue their project further
             </p>
             <h2>WHAT WE ARE LOOKING FOR</h2>
             <p>we want to support teams that are:
@@ -43,7 +43,7 @@
                 <ul>
                     <li>who you are</li>
                     <li>what are you working on</li>
-                    <li>wow would the money help</li>
+                    <li>how would the money help</li>
                 </ul>
             </p>
             <h2>DEADLINE</h2>
@@ -54,8 +54,7 @@
                 <h3>why only $300?</h3>
                 <p>we just graduated and only one of us has a cali job</p>
                 <h3>why even do it then?</h3>
-                <p>we care and want to help, even if it's just a little bit. 
-                </p>
+                <p>small steps lead to big changes;</p>
                 <p>read our master plan <a href="wrenchfund_plan.html">here</a></p>
                 <h3>why only capstone groups?</h3>
                 <p>it's easier that way for now</p>
@@ -66,7 +65,7 @@
                 <h3>how will I get the money?</h3>
                 <p>e-transfer or cash</p>
                 <h3>when will I get the money</h3>
-                <p>January 1st</p>
+                <p>January 6th</p>
             </div>
 		</div>
     </div>
