--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	</script>
     <title>Wrench Fund</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -25,7 +27,7 @@
             <p>wrench fund is run by five uwaterloo engineering grads with the goal of 
                 increasing the agency of young engineers and the amount of hardware built in canada
             </p>
-            <h2>THE WRENCH GRANT</h2>
+            <h2>THE TORQUE GRANT</h2>
             <p>wrench fund is offering a $300 grant to a uwaterloo capstone team
                 to help them overcome financial barriers and inspire them to pursue their project further
             </p>
@@ -47,13 +49,13 @@
                 </ul>
             </p>
             <h2>DEADLINE</h2>
-            <p>applications are due by 11:59pm on December 24th</p>
+            <p>applications are due by 11:59pm on december 20th</p>
             <h2></h2>
             <h2>FAQ</h2>
             <div class="faq">
-                <h3>why only $300?</h3>
-                <p>we just graduated and only one of us has a cali job</p>
-                <h3>why even do it then?</h3>
+                <!-- <h3>why only $300?</h3>
+                <p>we just graduated and only one of us has a cali job</p> -->
+                <h3>why?</h3>
                 <p>small steps lead to big changes;</p>
                 <p>read our master plan <a href="wrenchfund_plan.html">here</a></p>
                 <h3>why only capstone groups?</h3>
@@ -65,7 +67,9 @@
                 <h3>how will I get the money?</h3>
                 <p>e-transfer or cash</p>
                 <h3>when will I get the money</h3>
-                <p>January 6th</p>
+                <p>january 6th</p>
+                <h3>what if I have more questions?</h3>
+                <p>wrenchhouse5@gmail.com</p>
             </div>
 		</div>
     </div>
