--- a/wrenchblog.html
+++ b/wrenchblog.html
@@ -12,7 +12,9 @@
 	</script>
     <title>WH | Blog</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -22,7 +24,7 @@
 			<h2>WHAT</h2>
 			<p>This is our official attempt at blogging. Thank you for being here.</p>
             <h2>ARTICLES</h2>
-			<p><a href=asseating.html>A Heuristical Study on Aged vs. Non-Aged Ass Consumption Tradeoffs with Currency Exchange</a><p>
+			<p><a href=blog1.html>A Heuristical Study on Aged vs. Non-Aged Ass Consumption Tradeoffs with Currency Exchange</a><p>
             <!-- <p>By Lu, J.S., Cole, C.J., Roberge-Arnott, S.J., Erisgu-Akildiz, D.K.</p> -->
 		</div>
     </div>
