--- a/summerloosplash.html
+++ b/summerloosplash.html
@@ -12,7 +12,9 @@
 	</script>
     <title>WH | Summerloo Splash</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
