--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </ul>
             </p>
             <h2>DEADLINE</h2>
-            <p>applications are due by 11:59pm on december 20th</p>
+            <p>applications are due by 11:59pm on december 20th, 2024</p>
             <h2></h2>
             <h2>FAQ</h2>
             <div class="faq">
@@ -67,7 +67,7 @@
                 <h3>how will I get the money?</h3>
                 <p>e-transfer or cash</p>
                 <h3>when will I get the money</h3>
-                <p>january 6th</p>
+                <p>january 6th, 2025</p>
                 <h3>what if I have more questions?</h3>
                 <p>wrenchhouse5@gmail.com</p>
             </div>
