--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 with your information and a 1 min video that tells us:
                 <ul>
                     <li>who you are</li>
-                    <li>what are you working on</li>
-                    <li>how would the money help</li>
+                    <li>what you are working on</li>
+                    <li>how the money would help</li>
                 </ul>
             </p>
             <h2>DEADLINE</h2>
