--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	gtag('config', 'G-WQXEV4JHSX');
 	</script>
-    <title>Wrench Fund</title>
+    <title>Wrench House</title>
     <link rel="stylesheet" href="index.css">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-16x16.png">
@@ -19,58 +19,20 @@
 </head>
 <body>
     <div class="header">
-        <img id="wrenchfund_logo" src="assets/wrenchfund_logo.png" alt="Wrench Fund Logo" />
+		<h1>WRENCH HOUSE</h1>
+		<p>welcome to the wrench house website, stay a while</p>
 	</div>
     <div class="content">
         <div class="headings">
-			<h2>ABOUT</h2>
-            <p>wrench fund is run by five uwaterloo engineering grads with the goal of 
-                increasing the agency of young engineers and the amount of hardware built in canada
-            </p>
-            <h2>THE TORQUE GRANT</h2>
-            <p>wrench fund is offering a $300 grant to a uwaterloo capstone team
-                to help them overcome financial barriers and inspire them to pursue their project further
-            </p>
-            <h2>WHAT WE ARE LOOKING FOR</h2>
-            <p>we want to support teams that are:
-                <ul>
-                    <li>working on hardware</li>
-                    <li>passionate about solving problems</li>
-                    <li>curious about commercialization and taking their project to the next level</li>
-                </ul>
-            </p>
-            <h2>HOW TO APPLY</h2>
-            <p>apply <a href="https://forms.gle/Pd3mxbpGR3UyHjqM8" target="_blank">here</a>, 
-                with your information and a 1 min video that tells us:
-                <ul>
-                    <li>who you are</li>
-                    <li>what you are working on</li>
-                    <li>how the money would help</li>
-                </ul>
-            </p>
-            <h2>DEADLINE</h2>
-            <p>applications are due by 11:59pm on december 20th, 2024</p>
-            <h2></h2>
-            <h2>FAQ</h2>
-            <div class="faq">
-                <!-- <h3>why only $300?</h3>
-                <p>we just graduated and only one of us has a cali job</p> -->
-                <h3>why?</h3>
-                <p>small steps lead to big changes;</p>
-                <p>read our master plan <a href="wrenchfund_plan.html">here</a></p>
-                <h3>why only capstone groups?</h3>
-                <p>it's easier that way for now</p>
-                <h3>will you expand elligibility in the future?</h3>
-                <p>yes we hope to</p>
-                <h3>are there any strings attached?</h3>
-                <p>no</p>
-                <h3>how will I get the money?</h3>
-                <p>e-transfer or cash</p>
-                <h3>when will I get the money</h3>
-                <p>january 6th, 2025</p>
-                <h3>what if I have more questions?</h3>
-                <p>wrenchhouse5@gmail.com</p>
-            </div>
+			<h2>DIRECTORY</h2>
+			<p><a href="https://wrenchfund.ca" target="_blank">wrench fund</a></p>
+			<p><a href=mcmaster-wrench.html>mcmaster-wrench</a></p>
+			<p><a href=casinonight.html>casino night</a><p>
+			<p><a href=summerloosplash.html>summerloo splash</a><p>
+			<p><a href=ginandtronic.html>gin and tronic</a><p>
+			<p><a href=fund.html>the wrench house fund</a></p>
+			<p><a href=wrenchblog.html>wrench blog</a></p>
+			<p><a href=about.html>about</a></p>
 		</div>
     </div>
 </body>
